# langgraph

./: .gitignore  agent.ipynb  doc_copy.ipynb  document.ipynb  ingestion.py  main.py  ollama.ipynb  pyproject.toml  requirements.txt  test.ipynb  test.py
.chroma/: chroma.sqlite3
graph/: graph.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/nodes/: web_search.py
