[tool.poetry]
name = "langgaph"
version = "0.1.0"
description = ""
authors = ["mantianly@163.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
beautifulsoup4 = "^4.12.3"
langchain-community = "^0.0.38"
tiktoken = "^0.6.0"
langchainhub = "^0.1.15"
langchain = "^0.1.20"
langgraph = "^0.0.48"
tavily-python = "^0.3.3"
langchain-openai = "^0.1.6"
python-dotenv = "^1.0.1"
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.0"
langchain-chroma = "^0.1.0"
dashscope = "^1.20.14"
transformers = "^4.48.0"
huggingface-hub = "^0.27.1"
truststore = "^0.10.0"
sentence-transformers = "^3.3.1"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
widgetsnbextension = "^4.0.13"
ipykernel = "^6.29.5"
faiss-cpu = "^1.9.0.post1"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
