[project]
name = "langgaph-course"
version = "0.1.0"
description = ""
authors = [
    {name = "man",email = "mantianly@163.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "tavily-python (>=0.5.0,<0.6.0)",
    "langchain-openai (>=0.3.0,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "isort (>=5.13.2,<6.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "langchain-chroma (>=0.2.0,<0.3.0)",
    "dashscope (>=1.20.14,<2.0.0)",
    "langchain-ollama (>=0.2.2,<0.3.0)",
    "langgraph (>=0.2.62,<0.3.0)",
    "langchain (>=0.3.14,<0.4.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "sentence-transformers (>=3.3.1,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)"
]

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

